Some improvements and fixing group items interaction