@@ -14,13 +14,11 @@ public class GroupGateCatalogHandler extends BasicItemCatalogHandler implements 
     public void purchase(ICatalogItem item, int itemId, ISession client, int amount, ICatalogPage page, GiftData giftData, FurnitureDefinition definition, ICatalogBundledItem bundledItem, String data) {
         if (data.isEmpty() || !StringUtils.isNumeric(data)) return;
 
-        if (!client.getPlayer().getGroups().contains(new Integer(data))) {
+        if (!client.getPlayer().getGroups().contains(Integer.valueOf(data))) {
             return;
         }
 
-        String extraData = data;
-
-        super.execute(item, client, amount, page, giftData, definition, bundledItem, data, extraData);
+        super.execute(item, client, amount, page, giftData, definition, bundledItem, data, data + ";0");
     }
 
     @Override
